--- a/Electronica.html
+++ b/Electronica.html
@@ -163,8 +163,8 @@
             <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary">Contactar</button>
         </div>
       </div>
     </div>
@@ -227,8 +227,8 @@
           <h5>Cotize Junto a Nosotros, Te esperamos!!!</h5>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary">Contactar</button>
         </div>
       </div>
     </div>
