--- a/Area de Suspencion y Direccion.html
+++ b/Area de Suspencion y Direccion.html
@@ -68,7 +68,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacute; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacuten; M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -128,7 +128,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacute; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe2">Informaci&oacuten; M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -189,7 +189,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabe3">Informaci&oacute; M&aacute;s Detallada</h5>
+          <h5 class="modal-title" id="exampleModalLabe3">Informaci&oacuten; M&aacute;s Detallada</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
